[gd_scene load_steps=4 format=3 uid="uid://b3n7k5w2sax4m"]

[ext_resource type="Script" uid="uid://clgk3elureanb" path="res://scripts/screens/DictionaryScreen.gd" id="1_dict"]
[ext_resource type="PackedScene" uid="uid://bxqm8yvwknfd" path="res://scenes/ui/DictionaryEntry.tscn" id="2_entry"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.95, 0.92, 0.88, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.25, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 12
shadow_offset = Vector2(6, 6)

[node name="DictionaryScreen" type="Control"]
custom_minimum_size = Vector2(600, 690)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1320.0
offset_bottom = -390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dict")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 38.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.45, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "Personal Catalog • Day 1 • 0 Symbols Documented"

[node name="SearchBox" type="LineEdit" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
placeholder_text = "Search symbols or meanings..."
clear_button_enabled = true

[node name="FilterButtons" type="HBoxContainer" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AllButton" type="Button" parent="VBoxContainer/Header/FilterButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
toggle_mode = true
button_pressed = true
text = "All"

[node name="ElementalButton" type="Button" parent="VBoxContainer/Header/FilterButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
toggle_mode = true
text = "Elemental"

[node name="StructuralButton" type="Button" parent="VBoxContainer/Header/FilterButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
toggle_mode = true
text = "Structural"

[node name="TemporalButton" type="Button" parent="VBoxContainer/Header/FilterButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
toggle_mode = true
text = "Temporal"

[node name="MysticalButton" type="Button" parent="VBoxContainer/Header/FilterButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
toggle_mode = true
text = "Mystical"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="PlaceholderEntry" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_entry")]
layout_mode = 2
